--- a/src/app/components/main-menu/main-menu.component.html
+++ b/src/app/components/main-menu/main-menu.component.html
@@ -34,7 +34,7 @@
         <div *ngIf="closeHistory" class="col-1" (click)="closeH()">
           <div class="d-flex justify-content-center">
             <button class="btn btn-custom">
-              <img src="./assets/cerrar.png" alt="Cerrar accordion" width="30px">
+              <img class="cerrar" src="./assets/cerrar.png" alt="Cerrar accordion" width="30px">
             </button>
           </div>
         </div>
